unpackaged/main/default/objects/Search_and_tag_admin__c/Search_and_tag_admin__c.object-meta.xml
<CustomObject>
    <label>Search And Tag</label>
    <nameField>
        <label>Search Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Search and tags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>