unpackaged/main/default/objects/Search_and_tag_admin__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <label>ClientSecret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>