unpackaged/main/default/objects/Search_and_tag_admin__c/fields/Destination_Object_API__c.field-meta.xml
<CustomField>
    <fullName>Destination_Object_API__c</fullName>
    <label>Destination Object API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>