unpackaged/main/default/objects/Search_and_tag_admin__c/fields/Destination_Recordtype_Id__c.field-meta.xml
<CustomField>
    <fullName>Destination_Recordtype_Id__c</fullName>
    <label>Destination Recordtype Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>