unpackaged/main/default/objects/Search_and_tag_admin__c/fields/External_Field__c.field-meta.xml
<CustomField>
    <fullName>External_Field__c</fullName>
    <label>External Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>