unpackaged/main/default/objects/Search_and_tag_admin__c/fields/Search_Field__c.field-meta.xml
<CustomField>
    <fullName>Search_Field__c</fullName>
    <label>Search Field</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>