unpackaged/main/default/objects/Search_and_tag_admin__c/fields/Source_Object_API__c.field-meta.xml
<CustomField>
    <fullName>Source_Object_API__c</fullName>
    <label>Source Object API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>