unpackaged/main/default/objects/Search_and_tag_admin__c/fields/Source_RecordTypeID__c.field-meta.xml
<CustomField>
    <fullName>Source_RecordTypeID__c</fullName>
    <label>Source RecordTypeID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>