unpackaged/main/default/objects/Search_and_tag_admin__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>